RESOLVED FIXED126776
[iOS] Fill in missing WebCoreThread function pointers
https://bugs.webkit.org/show_bug.cgi?id=126776
Summary [iOS] Fill in missing WebCoreThread function pointers
Joseph Pecoraro
Reported 2014-01-10 13:24:25 PST
Source/WebCore/platform/ios/wak/WebCoreThreadSystemInterface.cpp needs to fill in a few other WebCore* functions for Remote Web Inspector to work.
Attachments
[PATCH] Proposed Fix (1.44 KB, patch)
2014-01-10 13:25 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2014-01-10 13:25:19 PST
Created attachment 220880 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2014-01-10 14:07:52 PST
Comment on attachment 220880 [details] [PATCH] Proposed Fix Clearing flags on attachment: 220880 Committed r161676: <http://trac.webkit.org/changeset/161676>
WebKit Commit Bot
Comment 3 2014-01-10 14:07:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.