[iOS] Fill in missing WebCoreThread function pointers https://bugs.webkit.org/show_bug.cgi?id=126776

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-01-10
Reviewed by Timothy Hatcher.

* platform/ios/wak/WebCoreThreadSystemInterface.cpp:
(InitWebCoreThreadSystemInterface):

Canonical link: https://commits.webkit.org/144686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161676 268f45cc-cd09-0410-ab3c-d52691b4dbfc